[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_ryanjob42"
version = "0.0.2"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE"] }
authors = [
  { name="Ryan Job", email="ryanjob42@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ryanjob42/packaging_tutorial"
Issues = "https://github.com/ryanjob42/packaging_tutorial/issues"
